--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,11 @@
 		<meta name="viewport" content="width=320, user-scalable=no">
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Map Test App</title>
+		<style>
+			body{
+				margin: 0px;
+			}
+		</style>
 		<link rel="stylesheet" href="plugin/leaflet/leaflet.css" />
 		<link rel="stylesheet" href="plugin/toolbar/toolbar.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="plugin/leaflet/leaflet.ie.css" /><![endif]-->
@@ -44,7 +49,7 @@
 				
 				//L.tileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png', {
 				L.tileLayer('map_data/{z}/{x}/{y}.png', {
-					maxZoom: 12,
+					maxZoom: 15,
 					attribution: 'Arsheet Company'
 				}).addTo(map);
 
