--- a/www/index.html
+++ b/www/index.html
@@ -68,14 +68,14 @@
 
 				var popup = L.popup();
 
-				function onMapClick(e) {
+				/*function onMapClick(e) {
 					popup
 						.setLatLng(e.latlng)
 						.setContent("You clicked the map at " + e.latlng.toString())
 						.openOn(map);
 				}
 
-				map.on('click', onMapClick);
+				map.on('click', onMapClick);*/
 
 				myRouter = function(l1, l2, cb){
 					layer = {_lanlngs: [l1, l2]};
