Fixed popup icon location

--- a/www/index.html
+++ b/www/index.html
@@ -94,7 +94,7 @@
 			}*/
 			
 			function gen_poi_popup(id, type, title, text){
-				return "<table style='width: 250px;'><tr><td style='width: 150px; vertical-align: top;'><img style='margin-bottom: -12px; margin-right: 5px; width: 25px;' src='images/poi/" + type + ".png' />" + type + "<br /><br /><b>" + title + "</b><br />" + text + "</td><td style='background: #EEE; color: #AAA; text-align: center' rowspan=2>Image</td></tr><tr><td style='vertical-align: bottom;'><table style='width: 100%; height: 30px; font-size: 10px'><tr><td style='width: 50%'><input style='width: 100%; height: 100%; font-size: 8px' type='button' onclick='open_poi_edit(" + id + ")' value='Edit' /></td><td style='width: 50%;'><input type='button' style='width: 100%; height: 100%; font-size: 8px' value='Route to Here' /></td></tr></table></td></tr></table>";
+				return "<table style='width: 250px;'><tr><td style='width: 150px; vertical-align: top;'><img style='margin-top: -5px; margin-right: 5px; width: 25px;' src='images/poi/" + type + ".png' />" + type + "<br /><br /><b>" + title + "</b><br />" + text + "</td><td style='background: #EEE; color: #AAA; text-align: center' rowspan=2>Image</td></tr><tr><td style='vertical-align: bottom;'><table style='width: 100%; height: 30px; font-size: 10px'><tr><td style='width: 50%'><input style='width: 100%; height: 100%; font-size: 8px' type='button' onclick='open_poi_edit(" + id + ")' value='Edit' /></td><td style='width: 50%;'><input type='button' style='width: 100%; height: 100%; font-size: 8px' value='Route to Here' /></td></tr></table></td></tr></table>";
 			}
 			
 			function init_pois(){
