--- a/www/index.html
+++ b/www/index.html
@@ -597,13 +597,20 @@
 			</div>
 			<script>
 				function create_poi_list_item(id, title, text, type, img){
-					return "<table style=\"width: 200px; height: 80px; margin: 5px; display: inline-block; font-size: 10px; border: 1px solid #EEE; background-color: #FAFAFA; border-radius: 10px; padding: 5px; box-shadow: 1px 1px 4px 0px #AAA;\"><tr><td rowspan=3 style=\"width: 80px; height: 80px; background-image: "+img+"; background-repeat: no-repeat; background-size: contain; background-position: center center;\"></td><td style=\"width: 120px\">"+title+"</td></tr><tr><td>"+type+"</td></tr><tr style=\"height: 100%; vertical-align: top\"><td>"+text+"</td></tr></table>";
+					return "<table style=\"width: 200px; height: 80px; margin: 5px; display: inline-block; font-size: 10px; border: 1px solid #EEE; background-color: #FAFAFA; border-radius: 10px; padding: 5px; box-shadow: 1px 1px 4px 0px #AAA;\"><tr><td rowspan=3 style=\"width: 80px; height: 75px; background-color: #EEE; background-image: "+img+"; background-repeat: no-repeat; background-size: contain; background-position: center center;\"></td><td style=\"width: 120px\"><b>"+title+"</b></td></tr><tr><td>"+type+"</td></tr><tr style=\"height: 100%; vertical-align: top\"><td>"+text+"</td></tr></table>";
 				}
 				
 				function load_poi_list_items(q){
+					var query = "";
+					if(q != ''){
+						query = "WHERE [title] LIKE '%" + q + "%' ";
+						query += "OR [text] LIKE '%" + q + "%' ";
+						query += "OR [type] LIKE '%" + q + "%' ";
+					}
+
 					document.getElementById('poi_list_td').innerHTML = "";
 					db.transaction(function(tx){
-						tx.executeSql("SELECT [id], [type], [title], [text], [image] FROM POI",[],function(tx, result){
+						tx.executeSql("SELECT [id], [type], [title], [text], [image] FROM POI " + query, [], function(tx, result){
 							for(var i=0;i<result.rows.length;i++){
 								var s_id    = result.rows.item(i).id;
 								var s_type  = result.rows.item(i).type;
@@ -611,7 +618,6 @@
 								var s_text  = result.rows.item(i).text;
 								var s_image = result.rows.item(i).image;
 								var elem = create_poi_list_item(s_id, s_title, s_text, s_type, s_image);
-								console.log(elem);
 								document.getElementById('poi_list_td').innerHTML += elem;
 							}
 						});
@@ -627,7 +633,7 @@
 				</tr>
 				<tr style="height: 30px;">
 					<td>
-						<input type="text" /><input type="button" value="Search" onclick="load_poi_list_items();" />
+						<input type="text" id="query" /><input type="button" value="Search" onclick="load_poi_list_items($('#query').val());" />
 					</td>
 					<td style="text-align: right;">
 						<input type="button" value="Add new POI" onclick="$('#manage_poi_window').fadeOut('fast'); change_state('ADD_POI', 'Click on the map ');" />
@@ -642,7 +648,7 @@
 				</tr>
 				<tr style="height: 30px;">
 					<td colspan=2>
-						<input type="button" value="Back" style="width: 100%;" />
+						<input type="button" value="Back" style="width: 100%;" onclick="$('#manage_poi_window').fadeOut('fast');" />
 					</td>
 				</tr>
 			</table>
