--- a/www/index.html
+++ b/www/index.html
@@ -109,17 +109,17 @@
 				if(my_dir_watcher == null){
 					//my_dir_watcher = window.setTimeout(read_dir, 1000);
 					my_dir_watcher = navigator.compass.watchHeading(function(heading){
-						if(my_dir == null)
+						//if(my_dir == null)
 							my_dir = heading.magneticHeading;
-						else
-							my_dir = 0.8 * my_dir + 0.2 * heading.magneticHeading;
+						//else
+						//	my_dir = 0.8 * my_dir + 0.2 * heading.magneticHeading;
 						show_my_view_area();
 					}, function(error){
 						change_desc("Arsheet Company");
 						my_dir_watcher = window.setTimeout(read_dir, 1000);												
 					}, {
 						frequency: 100,
-						filter: 10
+						filter: 1
 					});
 				}
 				else{
